Implemented shuffle functionality using class

--- a/shuffle.html
+++ b/shuffle.html
@@ -31,6 +31,8 @@
 		<div class="mfooter">
 			<div class="signature">Shuffle and sort by Prasadarao G</div>
 		</div>
-		<script type="text/javascript" src="assets/shuffle.js"></script>			
+		<!-- Both shuffle.js & shuffle_withclass.js work as expected. -->
+		<!--<script type="text/javascript" src="assets/shuffle.js"></script>-->			
+		<script type="text/javascript" src="assets/shuffle_withclass.js"></script>			
 	</body>
 </html>
